testfiles/advanced_tests/SemanticErrors/incompatibleTypes1ASTVisual.dot
digraph AST {
  "128497226321344" [label="Start"];
  "128497226321344" -> "128497226323840";
  "128497226323840" [label="Code"];
  "128497226323840" -> "128497226328400";
  "128497226328400" [label="Function"];
  "128497226328400" -> "128497226317936";
  "128497226328400" -> "128497226323072";
  "128497226317936" [label="main"];
  "128497226323072" [label="Code"];
  "128497226323072" -> "128497226323792";
  "128497226323072" -> "128497226321200";
  "128497226323072" -> "128497226318224";
  "128497226323072" -> "128497226325040";
  "128497226323072" -> "128497226324080";
  "128497226323792" [label="Declaration"];
  "128497226323792" -> "128497226319136";
  "128497226319136" [label="x"];
  "128497226321200" [label="Assignment"];
  "128497226321200" -> "128497226317888";
  "128497226321200" -> "128497226332384";
  "128497226317888" [label="x"];
  "128497226332384" [label="Expr"];
  "128497226332384" -> "128497226334016";
  "128497226332384" -> "128497226332864";
  "128497226332384" -> "128497226333920";
  "128497226334016" [label="5"];
  "128497226332864" [label="+"];
  "128497226333920" [label="'a'"];
  "128497226318224" [label="Assignment"];
  "128497226318224" -> "128497226325232";
  "128497226318224" -> "128497226333584";
  "128497226325232" [label="x"];
  "128497226333584" [label="Expr"];
  "128497226333584" -> "128497226331568";
  "128497226333584" -> "128497226324944";
  "128497226333584" -> "128497226328736";
  "128497226331568" [label="5"];
  "128497226324944" [label="-"];
  "128497226328736" [label="'a'"];
  "128497226325040" [label="Assignment"];
  "128497226325040" -> "128497226333872";
  "128497226325040" -> "128497226333200";
  "128497226333872" [label="x"];
  "128497226333200" [label="Expr"];
  "128497226333200" -> "128497226323648";
  "128497226333200" -> "128497226318176";
  "128497226333200" -> "128497226322448";
  "128497226323648" [label="5"];
  "128497226318176" [label="*"];
  "128497226322448" [label="'a'"];
  "128497226324080" [label="Assignment"];
  "128497226324080" -> "128497226322064";
  "128497226324080" -> "128497226333152";
  "128497226322064" [label="x"];
  "128497226333152" [label="Expr"];
  "128497226333152" -> "128497226327056";
  "128497226333152" -> "128497226320192";
  "128497226333152" -> "128497226326048";
  "128497226327056" [label="5"];
  "128497226320192" [label="/"];
  "128497226326048" [label="'a'"];
}
